@@ -17,18 +17,24 @@
 
 package org.openqa.selenium.grid.node.local;
 
-import static com.google.common.collect.ImmutableSet.toImmutableSet;
+import static java.nio.file.Files.readAttributes;
+import static java.time.ZoneOffset.UTC;
+import static java.time.format.DateTimeFormatter.RFC_1123_DATE_TIME;
+import static java.util.Locale.US;
+import static java.util.Objects.requireNonNullElseGet;
+import static java.util.stream.Collectors.toUnmodifiableSet;
+import static org.openqa.selenium.HasDownloads.DownloadedFile;
 import static org.openqa.selenium.concurrent.ExecutorServices.shutdownGracefully;
 import static org.openqa.selenium.grid.data.Availability.DOWN;
 import static org.openqa.selenium.grid.data.Availability.DRAINING;
 import static org.openqa.selenium.grid.data.Availability.UP;
 import static org.openqa.selenium.grid.node.CapabilityResponseEncoder.getEncoder;
+import static org.openqa.selenium.net.Urls.urlDecode;
 import static org.openqa.selenium.remote.CapabilityType.ENABLE_DOWNLOADS;
 import static org.openqa.selenium.remote.HttpSessionId.getSessionId;
 import static org.openqa.selenium.remote.RemoteTags.CAPABILITIES;
 import static org.openqa.selenium.remote.RemoteTags.SESSION_ID;
 import static org.openqa.selenium.remote.http.Contents.asJson;
-import static org.openqa.selenium.remote.http.Contents.string;
 import static org.openqa.selenium.remote.http.HttpMethod.DELETE;
 
 import com.github.benmanes.caffeine.cache.Cache;
@@ -36,8 +42,7 @@ import com.github.benmanes.caffeine.cache.Caffeine;
 import com.github.benmanes.caffeine.cache.RemovalCause;
 import com.github.benmanes.caffeine.cache.Ticker;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import com.google.common.net.MediaType;
 import java.io.Closeable;
 import java.io.File;
 import java.io.IOException;
@@ -45,9 +50,14 @@ import java.io.Serializable;
 import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.attribute.BasicFileAttributes;
+import java.nio.file.attribute.FileTime;
 import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -66,6 +76,7 @@ import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.ImmutableCapabilities;
 import org.openqa.selenium.MutableCapabilities;
@@ -84,6 +95,11 @@ import org.openqa.selenium.grid.data.NodeHeartBeatEvent;
 import org.openqa.selenium.grid.data.NodeId;
 import org.openqa.selenium.grid.data.NodeStatus;
 import org.openqa.selenium.grid.data.Session;
+import org.openqa.selenium.grid.data.SessionClosedReason;
+import org.openqa.selenium.grid.data.SessionCreatedData;
+import org.openqa.selenium.grid.data.SessionCreatedEvent;
+import org.openqa.selenium.grid.data.SessionEvent;
+import org.openqa.selenium.grid.data.SessionEventData;
 import org.openqa.selenium.grid.data.Slot;
 import org.openqa.selenium.grid.data.SlotId;
 import org.openqa.selenium.grid.jmx.JMXHelper;
@@ -105,6 +121,7 @@ import org.openqa.selenium.io.Zip;
 import org.openqa.selenium.json.Json;
 import org.openqa.selenium.remote.Browser;
 import org.openqa.selenium.remote.SessionId;
+import org.openqa.selenium.remote.http.Contents;
 import org.openqa.selenium.remote.http.HttpMethod;
 import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
@@ -121,6 +138,7 @@ public class LocalNode extends Node implements Closeable {
 
   private static final Json JSON = new Json();
   private static final Logger LOG = Logger.getLogger(LocalNode.class.getName());
+  private static final DateTimeFormatter HTTP_DATE_FORMAT = RFC_1123_DATE_TIME.withLocale(US);
 
   private final EventBus bus;
   private final URI externalUri;
@@ -141,6 +159,11 @@ public class LocalNode extends Node implements Closeable {
   private final Cache<SessionId, TemporaryFilesystem> downloadsTempFileSystem;
   private final AtomicInteger pendingSessions = new AtomicInteger();
   private final AtomicInteger sessionCount = new AtomicInteger();
+  // Tracks sessions that are reserved (pending creation) or active, used for maxSessionCount check
+  private final AtomicInteger reservedOrActiveSessionCount = new AtomicInteger();
+  // Tracks consecutive session creation failures to mark node DOWN if threshold exceeded
+  private final AtomicInteger consecutiveSessionFailures = new AtomicInteger();
+  private final int nodeDownFailureThreshold;
   private final Runnable shutdown;
   private final ReadWriteLock drainLock = new ReentrantReadWriteLock();
 
@@ -149,7 +172,7 @@ public class LocalNode extends Node implements Closeable {
       EventBus bus,
       URI uri,
       URI gridUri,
-      HealthCheck healthCheck,
+      @Nullable HealthCheck healthCheck,
       int maxSessionCount,
       int drainAfterSessionCount,
       boolean cdpEnabled,
@@ -160,7 +183,8 @@ public class LocalNode extends Node implements Closeable {
       List<SessionSlot> factories,
       Secret registrationSecret,
       boolean managedDownloadsEnabled,
-      int connectionLimitPerSession) {
+      int connectionLimitPerSession,
+      int nodeDownFailureThreshold) {
     super(
         tracer,
         new NodeId(UUID.randomUUID()),
@@ -175,7 +199,7 @@ public class LocalNode extends Node implements Closeable {
     this.maxSessionCount =
         Math.min(Require.positive("Max session count", maxSessionCount), factories.size());
     this.heartbeatPeriod = heartbeatPeriod;
-    this.factories = ImmutableList.copyOf(factories);
+    this.factories = List.copyOf(factories);
     Require.nonNull("Registration secret", registrationSecret);
     this.configuredSessionCount = drainAfterSessionCount;
     this.drainAfterSessions = this.configuredSessionCount > 0;
@@ -184,6 +208,8 @@ public class LocalNode extends Node implements Closeable {
     this.bidiEnabled = bidiEnabled;
     this.managedDownloadsEnabled = managedDownloadsEnabled;
     this.connectionLimitPerSession = connectionLimitPerSession;
+    // Use 0 to disable the failure threshold feature (unlimited retries)
+    this.nodeDownFailureThreshold = nodeDownFailureThreshold;
 
     this.healthCheck =
         healthCheck == null
@@ -303,6 +329,7 @@ public class LocalNode extends Node implements Closeable {
                   stopAllSessions();
                   drain();
                 }));
+
     new JMXHelper().register(this);
   }
 
@@ -311,7 +338,8 @@ public class LocalNode extends Node implements Closeable {
     shutdown.run();
   }
 
-  private void stopTimedOutSession(SessionId id, SessionSlot slot, RemovalCause cause) {
+  private void stopTimedOutSession(
+      @Nullable SessionId id, @Nullable SessionSlot slot, RemovalCause cause) {
     try (Span span = tracer.getCurrentContext().createSpan("node.stop_session")) {
       AttributeMap attributeMap = tracer.createAttributeMap();
       attributeMap.put(AttributeKey.LOGGER_CLASS.getKey(), getClass().getName());
@@ -321,12 +349,17 @@ public class LocalNode extends Node implements Closeable {
         attributeMap.put("session.id", id.toString());
         attributeMap.put("session.timeout_in_seconds", getSessionTimeout().toSeconds());
         attributeMap.put("session.remove.cause", cause.name());
+
+        // Determine the SessionClosedReason based on RemovalCause
+        SessionClosedReason closeReason;
         if (cause == RemovalCause.EXPIRED) {
+          closeReason = SessionClosedReason.TIMEOUT;
           // Session is timing out, stopping it by sending a DELETE
           LOG.log(Level.INFO, () -> String.format("Session id %s timed out, stopping...", id));
           span.setStatus(Status.CANCELLED);
           span.addEvent(String.format("Stopping the the timed session %s", id), attributeMap);
         } else {
+          closeReason = SessionClosedReason.QUIT_COMMAND;
           LOG.log(Level.INFO, () -> String.format("Session id %s is stopping on demand...", id));
           span.addEvent(String.format("Stopping the session %s on demand", id), attributeMap);
         }
@@ -341,8 +374,10 @@ public class LocalNode extends Node implements Closeable {
                 String.format("Exception while trying to stop session %s", id), attributeMap);
           }
         }
-        // Attempt to stop the session
-        slot.stop();
+        // Attempt to stop the session with the appropriate reason and node context
+        slot.stop(closeReason, getId(), externalUri);
+        // Decrement the reserved/active session counter
+        reservedOrActiveSessionCount.decrementAndGet();
         // Decrement pending sessions if Node is draining
         if (this.isDraining()) {
           int done = pendingSessions.decrementAndGet();
@@ -388,6 +423,10 @@ public class LocalNode extends Node implements Closeable {
 
   @ManagedAttribute(name = "Status")
   public Availability getAvailability() {
+    if (nodeDownFailureThreshold > 0
+        && consecutiveSessionFailures.get() >= nodeDownFailureThreshold) {
+      return DOWN;
+    }
     return isDraining() ? DRAINING : UP;
   }
 
@@ -405,6 +444,26 @@ public class LocalNode extends Node implements Closeable {
   public float getLoad() {
     long inUse = factories.stream().filter(sessionSlot -> !sessionSlot.isAvailable()).count();
     return inUse / (float) maxSessionCount * 100f;
+  }
+
+  @ManagedAttribute(name = "ConsecutiveSessionFailures")
+  public int getConsecutiveSessionFailures() {
+    return consecutiveSessionFailures.get();
+  }
+
+  /**
+   * Resets the consecutive session creation failure counter. This can be used to recover a node
+   * that was marked as DOWN due to exceeding the failure threshold, for example after external
+   * intervention has resolved the underlying issue.
+   */
+  public void resetConsecutiveSessionFailures() {
+    int previousValue = consecutiveSessionFailures.getAndSet(0);
+    if (previousValue > 0) {
+      LOG.info(
+          String.format(
+              "Consecutive session failure counter reset from %d to 0. Node availability restored.",
+              previousValue));
+    }
   }
 
   @ManagedAttribute(name = "RemoteNodeUri")
@@ -432,6 +491,21 @@ public class LocalNode extends Node implements Closeable {
       CreateSessionRequest sessionRequest) {
     Require.nonNull("Session request", sessionRequest);
 
+    // Early check before acquiring lock (fast path for draining nodes)
+    if (isDraining()) {
+      return Either.left(
+          new RetrySessionRequestException("The node is draining. Cannot accept new sessions."));
+    }
+
+    // Early check for failure threshold (fast path for unhealthy nodes)
+    if (nodeDownFailureThreshold > 0
+        && consecutiveSessionFailures.get() >= nodeDownFailureThreshold) {
+      return Either.left(
+          new RetrySessionRequestException(
+              "The node is marked as DOWN due to exceeding the failure threshold. Cannot accept new"
+                  + " sessions."));
+    }
+
     Lock lock = drainLock.readLock();
     lock.lock();
 
@@ -443,18 +517,7 @@ public class LocalNode extends Node implements Closeable {
       attributeMap.put(
           "session.request.downstreamdialect", sessionRequest.getDownstreamDialects().toString());
 
-      int currentSessionCount = getCurrentSessionCount();
-      span.setAttribute("current.session.count", currentSessionCount);
-      attributeMap.put("current.session.count", currentSessionCount);
-
-      if (currentSessionCount >= maxSessionCount) {
-        span.setAttribute(AttributeKey.ERROR.getKey(), true);
-        span.setStatus(Status.RESOURCE_EXHAUSTED);
-        attributeMap.put("max.session.count", maxSessionCount);
-        span.addEvent("Max session count reached", attributeMap);
-        return Either.left(new RetrySessionRequestException("Max session count reached."));
-      }
-
+      // Re-check after acquiring lock (double-checked locking pattern)
       if (isDraining()) {
         span.setStatus(
             Status.UNAVAILABLE.withDescription(
@@ -463,21 +526,46 @@ public class LocalNode extends Node implements Closeable {
             new RetrySessionRequestException("The node is draining. Cannot accept new sessions."));
       }
 
-      // Identify possible slots to use as quickly as possible to enable concurrent session starting
-      SessionSlot slotToUse = null;
-      synchronized (factories) {
-        for (SessionSlot factory : factories) {
-          if (!factory.isAvailable() || !factory.test(sessionRequest.getDesiredCapabilities())) {
-            continue;
-          }
+      // Re-check failure threshold after acquiring lock
+      if (nodeDownFailureThreshold > 0
+          && consecutiveSessionFailures.get() >= nodeDownFailureThreshold) {
+        span.setStatus(
+            Status.UNAVAILABLE.withDescription(
+                "The node is marked as DOWN due to exceeding the failure threshold."));
+        return Either.left(
+            new RetrySessionRequestException(
+                "The node is marked as DOWN due to exceeding the failure threshold. "
+                    + "Cannot accept new sessions."));
+      }
 
-          factory.reserve();
+      // Atomically check and reserve a session slot to prevent exceeding maxSessionCount
+      // This fixes the race condition where multiple threads could pass the count check
+      int currentCount = reservedOrActiveSessionCount.incrementAndGet();
+      span.setAttribute("current.session.count", currentCount);
+      attributeMap.put("current.session.count", currentCount);
+
+      if (currentCount > maxSessionCount) {
+        reservedOrActiveSessionCount.decrementAndGet();
+        span.setAttribute(AttributeKey.ERROR.getKey(), true);
+        span.setStatus(Status.RESOURCE_EXHAUSTED);
+        attributeMap.put("max.session.count", maxSessionCount);
+        span.addEvent("Max session count reached", attributeMap);
+        return Either.left(new RetrySessionRequestException("Max session count reached."));
+      }
+
+      // Identify possible slots to use as quickly as possible to enable concurrent session starting
+      // Uses lock-free tryReserve() for better concurrency - no global lock needed
+      SessionSlot slotToUse = null;
+      Capabilities desiredCaps = sessionRequest.getDesiredCapabilities();
+      for (SessionSlot factory : factories) {
+        if (factory.tryReserve(desiredCaps)) {
           slotToUse = factory;
           break;
         }
       }
 
       if (slotToUse == null) {
+        reservedOrActiveSessionCount.decrementAndGet();
         span.setAttribute(AttributeKey.ERROR.getKey(), true);
         span.setStatus(Status.NOT_FOUND);
         span.addEvent("No slot matched the requested capabilities. ", attributeMap);
@@ -487,6 +575,7 @@ public class LocalNode extends Node implements Closeable {
 
       if (!decrementSessionCount()) {
         slotToUse.release();
+        reservedOrActiveSessionCount.decrementAndGet();
         span.setAttribute(AttributeKey.ERROR.getKey(), true);
         span.setStatus(Status.RESOURCE_EXHAUSTED);
         attributeMap.put("drain.after.session.count", configuredSessionCount);
@@ -522,6 +611,9 @@ public class LocalNode extends Node implements Closeable {
         }
         currentSessions.put(session.getId(), slotToUse);
 
+        // Reset consecutive failure counter on successful session creation
+        consecutiveSessionFailures.set(0);
+
         SessionId sessionId = session.getId();
         Capabilities caps = session.getCapabilities();
         SESSION_ID.accept(span, sessionId);
@@ -549,12 +641,40 @@ public class LocalNode extends Node implements Closeable {
                 "%s. Id: %s, Caps: %s",
                 sessionCreatedMessage, sessionId, externalSession.getCapabilities()));
 
+        // Create session data for events and listeners
+        SessionCreatedData createdData =
+            new SessionCreatedData(
+                sessionId,
+                getId(),
+                externalUri,
+                session.getUri(),
+                externalSession.getCapabilities(),
+                slotToUse.getStereotype(),
+                externalSession.getStartTime());
+
+        // Fire session created event for sidecar services
+        bus.fire(new SessionCreatedEvent(createdData));
+
         return Either.right(
             new CreateSessionResponse(
                 externalSession,
                 getEncoder(session.getDownstreamDialect()).apply(externalSession)));
       } else {
         slotToUse.release();
+        reservedOrActiveSessionCount.decrementAndGet();
+        // Restore session count that was decremented earlier, so node doesn't drain prematurely
+        restoreSessionCount();
+
+        // Track consecutive session creation failures
+        int failures = consecutiveSessionFailures.incrementAndGet();
+        if (nodeDownFailureThreshold > 0 && failures >= nodeDownFailureThreshold) {
+          LOG.warning(
+              String.format(
+                  "Node has reached the failure threshold (%d consecutive failures). "
+                      + "Node will be marked as DOWN.",
+                  nodeDownFailureThreshold));
+        }
+
         if (downloadsTfs != null) {
           downloadsTfs.deleteTemporaryFiles();
           downloadsTfs.deleteBaseDir();
@@ -580,8 +700,8 @@ public class LocalNode extends Node implements Closeable {
   private Capabilities setDownloadsDirectory(TemporaryFilesystem downloadsTfs, Capabilities caps) {
     File tempDir = downloadsTfs.createTempDir("download", "");
     if (Browser.CHROME.is(caps) || Browser.EDGE.is(caps)) {
-      ImmutableMap<String, Serializable> map =
-          ImmutableMap.of(
+      Map<String, Serializable> map =
+          Map.of(
               "download.prompt_for_download",
               false,
               "download.default_directory",
@@ -592,8 +712,8 @@ public class LocalNode extends Node implements Closeable {
       return appendPrefs(caps, optionsKey, map);
     }
     if (Browser.FIREFOX.is(caps)) {
-      ImmutableMap<String, Serializable> map =
-          ImmutableMap.of(
+      Map<String, Serializable> map =
+          Map.of(
               "browser.download.folderList", 2, "browser.download.dir", tempDir.getAbsolutePath());
       return appendPrefs(caps, "moz:firefoxOptions", map);
     }
@@ -690,7 +810,7 @@ public class LocalNode extends Node implements Closeable {
   }
 
   @Override
-  public TemporaryFilesystem getDownloadsFilesystem(SessionId sessionId) throws IOException {
+  public TemporaryFilesystem getDownloadsFilesystem(SessionId sessionId) {
     return downloadsTempFileSystem.getIfPresent(sessionId);
   }
 
@@ -738,26 +858,74 @@ public class LocalNode extends Node implements Closeable {
     }
     File downloadsDirectory =
         Optional.ofNullable(tempFS.getBaseDir().listFiles()).orElse(new File[] {})[0];
-    if (req.getMethod().equals(HttpMethod.GET)) {
-      // User wants to list files that can be downloaded
-      List<String> collected =
-          Arrays.stream(Optional.ofNullable(downloadsDirectory.listFiles()).orElse(new File[] {}))
-              .map(File::getName)
-              .collect(Collectors.toList());
-      ImmutableMap<String, Object> data = ImmutableMap.of("names", collected);
-      ImmutableMap<String, Map<String, Object>> result = ImmutableMap.of("value", data);
-      return new HttpResponse().setContent(asJson(result));
-    }
-    if (req.getMethod().equals(HttpMethod.DELETE)) {
-      File[] files = Optional.ofNullable(downloadsDirectory.listFiles()).orElse(new File[] {});
-      for (File file : files) {
-        FileHandler.delete(file);
+
+    try {
+      if (req.getMethod().equals(HttpMethod.GET) && req.getUri().endsWith("/se/files")) {
+        return listDownloadedFiles(downloadsDirectory);
       }
-      Map<String, Object> toReturn = new HashMap<>();
-      toReturn.put("value", null);
-      return new HttpResponse().setContent(asJson(toReturn));
+      if (req.getMethod().equals(HttpMethod.GET)) {
+        // Left here for backward compatibility.
+        // Remove this IF in Selenium 4.41, 4.42 or 4.43
+        return getDownloadedFile(downloadsDirectory, extractFileName(req));
+      }
+      if (req.getMethod().equals(HttpMethod.DELETE)) {
+        return deleteDownloadedFile(downloadsDirectory);
+      }
+      return getDownloadedFile(req, downloadsDirectory);
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
     }
-    String raw = string(req);
+  }
+
+  private String extractFileName(HttpRequest req) {
+    return extractFileName(req.getUri());
+  }
+
+  String extractFileName(String uri) {
+    String prefix = "/se/files/";
+    int index = uri.lastIndexOf(prefix);
+    if (index < 0) {
+      throw new IllegalArgumentException("Unexpected URL for downloading a file: " + uri);
+    }
+    return urlDecode(uri.substring(index + prefix.length())).replace(' ', '+');
+  }
+
+  /** User wants to list files that can be downloaded */
+  private HttpResponse listDownloadedFiles(File downloadsDirectory) {
+    File[] files = Optional.ofNullable(downloadsDirectory.listFiles()).orElse(new File[] {});
+    List<String> fileNames = Arrays.stream(files).map(File::getName).collect(Collectors.toList());
+    List<DownloadedFile> fileInfos =
+        Arrays.stream(files)
+            .map(this::getFileInfo)
+            .filter(file -> file.getLastModifiedTime() > 0)
+            .collect(Collectors.toList());
+
+    Map<String, Object> data =
+        Map.of(
+            "names", fileNames,
+            "files", fileInfos);
+    Map<String, Map<String, Object>> result = Map.of("value", data);
+    return new HttpResponse().setContent(asJson(result));
+  }
+
+  private DownloadedFile getFileInfo(File file) {
+    try {
+      BasicFileAttributes attributes = readAttributes(file.toPath(), BasicFileAttributes.class);
+      return new DownloadedFile(
+          file.getName(),
+          attributes.creationTime().toMillis(),
+          attributes.lastModifiedTime().toMillis(),
+          attributes.size());
+    } catch (NoSuchFileException e) {
+      return new DownloadedFile(file.getName(), -1, -1, -1);
+    } catch (IOException e) {
+      throw new UncheckedIOException("Failed to get file attributes: " + file.getAbsolutePath(), e);
+    }
+  }
+
+  private HttpResponse getDownloadedFile(HttpRequest req, File downloadsDirectory)
+      throws IOException {
+    String raw = req.contentAsString();
     if (raw.isEmpty()) {
       throw new WebDriverException(
           "Please specify file to download in payload as {\"name\": \"fileToDownload\"}");
@@ -771,30 +939,85 @@ public class LocalNode extends Node implements Closeable {
                     new WebDriverException(
                         "Please specify file to download in payload as {\"name\":"
                             + " \"fileToDownload\"}"));
-    try {
-      File[] allFiles =
-          Optional.ofNullable(downloadsDirectory.listFiles((dir, name) -> name.equals(filename)))
-              .orElse(new File[] {});
-      if (allFiles.length == 0) {
-        throw new WebDriverException(
-            String.format(
-                "Cannot find file [%s] in directory %s.",
-                filename, downloadsDirectory.getAbsolutePath()));
-      }
-      if (allFiles.length != 1) {
-        throw new WebDriverException(
-            String.format("Expected there to be only 1 file. There were: %s.", allFiles.length));
-      }
-      String content = Zip.zip(allFiles[0]);
-      ImmutableMap<String, Object> data =
-          ImmutableMap.of(
-              "filename", filename,
-              "contents", content);
-      ImmutableMap<String, Map<String, Object>> result = ImmutableMap.of("value", data);
-      return new HttpResponse().setContent(asJson(result));
-    } catch (IOException e) {
-      throw new UncheckedIOException(e);
+    File file = findDownloadedFile(downloadsDirectory, filename);
+    String contentType =
+        requireNonNullElseGet(
+            (String) incoming.get("format"), () -> MediaType.JSON_UTF_8.toString());
+
+    if (MediaType.OCTET_STREAM.toString().equalsIgnoreCase(contentType)) {
+      return fileAsBinaryResponse(file);
     }
+
+    String content = Zip.zip(file);
+    Map<String, Object> data =
+        Map.of(
+            "filename", filename,
+            "file", getFileInfo(file),
+            "contents", content);
+    Map<String, Map<String, Object>> result = Map.of("value", data);
+    return new HttpResponse().setContent(asJson(result));
+  }
+
+  /** Left here for backward compatibility. Remove this method in Selenium 4.41, 4.42 or 4.43 */
+  @Deprecated
+  private HttpResponse getDownloadedFile(File downloadsDirectory, String fileName)
+      throws IOException {
+    if (fileName.isEmpty()) {
+      throw new WebDriverException("Please specify file to download in URL");
+    }
+    File file = findDownloadedFile(downloadsDirectory, fileName);
+    return fileAsBinaryResponse(file);
+  }
+
+  private HttpResponse fileAsBinaryResponse(File file) throws IOException {
+    BasicFileAttributes attributes = readAttributes(file.toPath(), BasicFileAttributes.class);
+    return new HttpResponse()
+        .setHeader("Content-Type", MediaType.OCTET_STREAM.toString())
+        .setHeader("Content-Length", String.valueOf(attributes.size()))
+        .setHeader("Last-Modified", lastModifiedHeader(attributes.lastModifiedTime()))
+        .setContent(Contents.file(file));
+  }
+
+  private String lastModifiedHeader(FileTime fileTime) {
+    return HTTP_DATE_FORMAT.format(fileTime.toInstant().atZone(UTC));
+  }
+
+  private File findDownloadedFile(File downloadsDirectory, String filename)
+      throws WebDriverException {
+    List<File> matchingFiles =
+        List.of(
+            requireNonNullElseGet(
+                downloadsDirectory.listFiles((dir, name) -> name.equals(filename)),
+                () -> new File[0]));
+    if (matchingFiles.isEmpty()) {
+      List<File> files = downloadedFiles(downloadsDirectory);
+      throw new WebDriverException(
+          String.format(
+              "Cannot find file [%s] in directory %s. Found %s files: %s.",
+              filename, downloadsDirectory.getAbsolutePath(), files.size(), files));
+    }
+    if (matchingFiles.size() != 1) {
+      throw new WebDriverException(
+          String.format(
+              "Expected there to be only 1 file. Found %s files: %s.",
+              matchingFiles.size(), matchingFiles));
+    }
+    return matchingFiles.get(0);
+  }
+
+  private static List<File> downloadedFiles(File downloadsDirectory) {
+    File[] files = requireNonNullElseGet(downloadsDirectory.listFiles(), () -> new File[0]);
+    return List.of(files);
+  }
+
+  private HttpResponse deleteDownloadedFile(File downloadsDirectory) {
+    File[] files = Optional.ofNullable(downloadsDirectory.listFiles()).orElse(new File[] {});
+    for (File file : files) {
+      FileHandler.delete(file);
+    }
+    Map<String, @Nullable Object> toReturn = new HashMap<>();
+    toReturn.put("value", null);
+    return new HttpResponse().setContent(asJson(toReturn));
   }
 
   @Override
@@ -807,7 +1030,7 @@ public class LocalNode extends Node implements Closeable {
       return executeWebDriverCommand(req);
     }
 
-    Map<String, Object> incoming = JSON.toType(string(req), Json.MAP_TYPE);
+    Map<String, Object> incoming = JSON.toType(req.contentAsString(), Json.MAP_TYPE);
 
     File tempDir;
     try {
@@ -829,8 +1052,54 @@ public class LocalNode extends Node implements Closeable {
           String.format("Expected there to be only 1 file. There were: %s", allFiles.length));
     }
 
-    ImmutableMap<String, Object> result = ImmutableMap.of("value", allFiles[0].getAbsolutePath());
+    Map<String, Object> result = Map.of("value", allFiles[0].getAbsolutePath());
 
+    return new HttpResponse().setContent(asJson(result));
+  }
+
+  @Override
+  public HttpResponse fireSessionEvent(HttpRequest req, SessionId id) {
+    Require.nonNull("Session ID", id);
+
+    // Verify session exists
+    SessionSlot slot = currentSessions.getIfPresent(id);
+    if (slot == null) {
+      throw new NoSuchSessionException("Cannot find session with id: " + id);
+    }
+
+    // Parse the event data from request
+    Map<String, Object> incoming = JSON.toType(req.contentAsString(), Json.MAP_TYPE);
+    String eventType = (String) incoming.get("eventType");
+    if (eventType == null || eventType.isEmpty()) {
+      throw new WebDriverException(
+          "Event type is required. Please provide 'eventType' in payload.");
+    }
+
+    Object rawPayload = incoming.get("payload");
+    Map<String, Object> payload =
+        (rawPayload instanceof Map) ? (Map<String, Object>) rawPayload : Map.of();
+
+    // Create event data with node context
+    SessionEventData eventData =
+        SessionEventData.create(id, eventType, payload).withNodeContext(getId(), externalUri);
+
+    // Fire event via EventBus for sidecar services
+    bus.fire(new SessionEvent(eventData));
+
+    LOG.log(
+        Level.FINE,
+        () -> String.format("Session event fired: type=%s, sessionId=%s", eventType, id));
+
+    // Return success response
+    Map<String, Object> responseData =
+        Map.of(
+            "success",
+            true,
+            "eventType",
+            eventType,
+            "timestamp",
+            eventData.getTimestamp().toString());
+    Map<String, Object> result = Map.of("value", responseData);
     return new HttpResponse().setContent(asJson(result));
   }
 
@@ -971,9 +1240,15 @@ public class LocalNode extends Node implements Closeable {
                       lastStarted,
                       session);
                 })
-            .collect(toImmutableSet());
+            .collect(toUnmodifiableSet());
 
     Availability availability = isDraining() ? DRAINING : UP;
+
+    // Check if consecutive session creation failures have exceeded the threshold
+    if (nodeDownFailureThreshold > 0
+        && consecutiveSessionFailures.get() >= nodeDownFailureThreshold) {
+      availability = DOWN;
+    }
 
     // Check status in case this Node is a RelayNode
     Optional<SessionSlot> relaySlot =
@@ -1062,14 +1337,32 @@ public class LocalNode extends Node implements Closeable {
     return true;
   }
 
+  /**
+   * Restores the session count when session creation fails after decrementSessionCount() was
+   * called. This prevents the node from draining prematurely due to failed session attempts.
+   */
+  private void restoreSessionCount() {
+    if (this.drainAfterSessions) {
+      int remainingSessions = this.sessionCount.incrementAndGet();
+      LOG.log(
+          Debug.getDebugLogLevel(),
+          "Session creation failed, restored count. {0} remaining sessions before draining Node",
+          remainingSessions);
+    }
+  }
+
   private Map<String, Object> toJson() {
-    return ImmutableMap.of(
-        "id", getId(),
-        "uri", externalUri,
-        "maxSessions", maxSessionCount,
-        "draining", isDraining(),
+    return Map.of(
+        "id",
+        getId(),
+        "uri",
+        externalUri,
+        "maxSessions",
+        maxSessionCount,
+        "draining",
+        isDraining(),
         "capabilities",
-            factories.stream().map(SessionSlot::getStereotype).collect(Collectors.toSet()));
+        factories.stream().map(SessionSlot::getStereotype).collect(Collectors.toSet()));
   }
 
   public static class Builder {
@@ -1079,7 +1372,7 @@ public class LocalNode extends Node implements Closeable {
     private final URI uri;
     private final URI gridUri;
     private final Secret registrationSecret;
-    private final ImmutableList.Builder<SessionSlot> factories;
+    private final List<SessionSlot> factories;
     private int maxSessions = NodeOptions.DEFAULT_MAX_SESSIONS;
     private int drainAfterSessionCount = NodeOptions.DEFAULT_DRAIN_AFTER_SESSION_COUNT;
     private boolean cdpEnabled = NodeOptions.DEFAULT_ENABLE_CDP;
@@ -1090,6 +1383,8 @@ public class LocalNode extends Node implements Closeable {
     private Duration heartbeatPeriod = Duration.ofSeconds(NodeOptions.DEFAULT_HEARTBEAT_PERIOD);
     private boolean managedDownloadsEnabled = false;
     private int connectionLimitPerSession = -1;
+    // Default 0 means disabled (unlimited retries allowed)
+    private int nodeDownFailureThreshold = 0;
 
     private Builder(Tracer tracer, EventBus bus, URI uri, URI gridUri, Secret registrationSecret) {
       this.tracer = Require.nonNull("Tracer", tracer);
@@ -1097,7 +1392,7 @@ public class LocalNode extends Node implements Closeable {
       this.uri = Require.nonNull("Remote node URI", uri);
       this.gridUri = Require.nonNull("Grid URI", gridUri);
       this.registrationSecret = Require.nonNull("Registration secret", registrationSecret);
-      this.factories = ImmutableList.builder();
+      this.factories = new ArrayList<>();
     }
 
     public Builder add(Capabilities stereotype, SessionFactory factory) {
@@ -1149,6 +1444,20 @@ public class LocalNode extends Node implements Closeable {
       return this;
     }
 
+    /**
+     * Sets the maximum number of consecutive session creation failures allowed before the node is
+     * marked as DOWN. This helps detect and isolate unhealthy nodes that consistently fail to
+     * create sessions.
+     *
+     * @param threshold the maximum number of consecutive failures allowed (0 to disable, which is
+     *     the default)
+     * @return this builder
+     */
+    public Builder nodeDownFailureThreshold(int threshold) {
+      this.nodeDownFailureThreshold = threshold;
+      return this;
+    }
+
     public LocalNode build() {
       return new LocalNode(
           tracer,
@@ -1163,10 +1472,11 @@ public class LocalNode extends Node implements Closeable {
           ticker,
           sessionTimeout,
           heartbeatPeriod,
-          factories.build(),
+          List.copyOf(factories),
           registrationSecret,
           managedDownloadsEnabled,
-          connectionLimitPerSession);
+          connectionLimitPerSession,
+          nodeDownFailureThreshold);
     }
 
     public Advanced advanced() {
@@ -1176,13 +1486,7 @@ public class LocalNode extends Node implements Closeable {
     public class Advanced {
 
       public Advanced clock(Clock clock) {
-        ticker =
-            new Ticker() {
-              @Override
-              public long read() {
-                return clock.instant().toEpochMilli() * Duration.ofMillis(1).toNanos();
-              }
-            };
+        ticker = () -> clock.instant().toEpochMilli() * Duration.ofMillis(1).toNanos();
         return this;
       }
 
