@@ -17,6 +17,7 @@
 
 package org.openqa.selenium.ie;
 
+import static java.util.Collections.emptyList;
 import static java.util.stream.Collectors.toList;
 import static org.openqa.selenium.ie.InternetExplorerDriver.BROWSER_ATTACH_TIMEOUT;
 import static org.openqa.selenium.ie.InternetExplorerDriver.ELEMENT_SCROLL_BEHAVIOR;
@@ -33,16 +34,15 @@ import static org.openqa.selenium.remote.Browser.IE;
 import static org.openqa.selenium.remote.CapabilityType.BROWSER_NAME;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.AbstractDriverOptions;
@@ -68,8 +68,8 @@ public class InternetExplorerOptions extends AbstractDriverOptions<InternetExplo
   private static final String EDGE_EXECUTABLE_PATH = "ie.edgepath";
   private static final String IGNORE_PROCESS_MATCH = "ie.ignoreprocessmatch";
 
-  private static final List<String> CAPABILITY_NAMES =
-      Arrays.asList(
+  private static final Set<String> CAPABILITY_NAMES =
+      Set.of(
           BROWSER_ATTACH_TIMEOUT,
           ELEMENT_SCROLL_BEHAVIOR,
           ENABLE_PERSISTENT_HOVERING,
@@ -89,7 +89,7 @@ public class InternetExplorerOptions extends AbstractDriverOptions<InternetExplo
           EDGE_EXECUTABLE_PATH,
           IGNORE_PROCESS_MATCH);
 
-  private final Map<String, Object> ieOptions = new HashMap<>();
+  private final Map<String, @Nullable Object> ieOptions = new HashMap<>();
 
   public InternetExplorerOptions() {
     setCapability(BROWSER_NAME, IE.browserName());
@@ -149,16 +149,19 @@ public class InternetExplorerOptions extends AbstractDriverOptions<InternetExplo
   }
 
   public InternetExplorerOptions addCommandSwitches(String... switches) {
-    Object raw = getCapability(IE_SWITCHES);
+    final Object raw = getCapability(IE_SWITCHES);
+    final List<?> rawSwitches;
     if (raw == null) {
-      raw = new LinkedList<>();
+      rawSwitches = emptyList();
     } else if (raw instanceof String) {
-      raw = Arrays.asList(((String) raw).split(" "));
+      rawSwitches = List.of(((String) raw).split(" "));
+    } else {
+      rawSwitches = (List<?>) raw;
     }
 
     return amend(
         IE_SWITCHES,
-        Stream.concat(((List<?>) raw).stream(), Stream.of(switches))
+        Stream.concat(rawSwitches.stream(), Stream.of(switches))
             .filter(i -> i instanceof String)
             .map(String.class::cast)
             .collect(toList()));
@@ -230,7 +233,7 @@ public class InternetExplorerOptions extends AbstractDriverOptions<InternetExplo
   }
 
   @Override
-  public void setCapability(String key, Object value) {
+  public void setCapability(String key, @Nullable Object value) {
     if (IE_SWITCHES.equals(key)) {
       if (value instanceof List) {
         value = ((List<?>) value).stream().map(Object::toString).collect(Collectors.joining(" "));
@@ -246,9 +249,9 @@ public class InternetExplorerOptions extends AbstractDriverOptions<InternetExplo
 
     if (IE_OPTIONS.equals(key)) {
       ieOptions.clear();
-      Map<String, Object> streamFrom;
+      Map<String, @Nullable Object> streamFrom;
       if (value instanceof Map) {
-        streamFrom = (Map<String, Object>) value;
+        streamFrom = (Map<String, @Nullable Object>) value;
       } else if (value instanceof Capabilities) {
         streamFrom = ((Capabilities) value).asMap();
       } else {
@@ -261,8 +264,7 @@ public class InternetExplorerOptions extends AbstractDriverOptions<InternetExplo
           .forEach(
               entry -> {
                 if (IE_SWITCHES.equals(entry.getKey())) {
-                  setCapability(
-                      entry.getKey(), Arrays.asList((entry.getValue().toString()).split(" ")));
+                  setCapability(entry.getKey(), List.of((entry.getValue().toString()).split(" ")));
                 } else {
                   setCapability(entry.getKey(), entry.getValue());
                 }
@@ -275,6 +277,7 @@ public class InternetExplorerOptions extends AbstractDriverOptions<InternetExplo
     return Collections.emptySet();
   }
 
+  @Nullable
   @Override
   protected Object getExtraCapability(String capabilityName) {
     Require.nonNull("Capability name", capabilityName);
