@@ -22,13 +22,13 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.mockito.Mockito.mock;
 import static org.openqa.selenium.remote.DriverCommand.FIND_ELEMENT;
 
-import com.google.common.collect.ImmutableMap;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
@@ -115,8 +115,7 @@ class AugmenterTest {
     // This will force the class to be enhanced
     final Capabilities caps = new ImmutableCapabilities("magic.numbers", true);
 
-    DetonatingDriver driver = new DetonatingDriver();
-    driver.setCapabilities(caps);
+    DetonatingDriver driver = new DetonatingDriver(caps);
 
     WebDriver returned =
         getAugmenter()
@@ -146,7 +145,7 @@ class AugmenterTest {
     Capabilities caps = new ImmutableCapabilities("find by magic", true);
     StubExecutor executor = new StubExecutor(caps);
     final WebElement element = mock(WebElement.class);
-    executor.expect(FIND_ELEMENT, ImmutableMap.of("using", "magic", "value", "cheese"), element);
+    executor.expect(FIND_ELEMENT, Map.of("using", "magic", "value", "cheese"), element);
 
     WebDriver driver = new RemoteWebDriver(executor, caps);
     WebDriver returned =
@@ -338,12 +337,17 @@ class AugmenterTest {
 
   public static class DetonatingDriver extends RemoteWebDriver {
 
-    private Capabilities caps;
+    private final Capabilities caps;
 
-    public void setCapabilities(Capabilities caps) {
+    protected DetonatingDriver() {
+      this(null);
+    }
+
+    public DetonatingDriver(Capabilities caps) {
       this.caps = caps;
     }
 
+    @NonNull
     @Override
     public Capabilities getCapabilities() {
       return caps;
@@ -367,6 +371,7 @@ class AugmenterTest {
 
   public static class ChildRemoteDriver extends RemoteWebDriver implements HasMagicNumbers {
 
+    @NonNull
     @Override
     public Capabilities getCapabilities() {
       return new FirefoxOptions();
@@ -380,6 +385,7 @@ class AugmenterTest {
 
   public static class WithFinals extends RemoteWebDriver {
 
+    @NonNull
     @Override
     public Capabilities getCapabilities() {
       return new ImmutableCapabilities();
