@@ -19,8 +19,8 @@ package org.openqa.selenium.remote.http;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
@@ -31,7 +31,7 @@ class HttpMessageTest {
   @Test
   void allHeadersAreAdded() {
     for (HttpMessage<?> message :
-        Arrays.asList(new HttpRequest(HttpMethod.GET, "/"), new HttpResponse())) {
+        List.of(new HttpRequest(HttpMethod.GET, "/"), new HttpResponse())) {
       message.addHeader("Content-Length", "1024");
       message.addHeader("Content-length", "2048");
       message.addHeader("content-length", "4096");
@@ -40,16 +40,16 @@ class HttpMessageTest {
 
       message.getHeaderNames().forEach(headers::add);
 
-      assertThat(headers.contains("Content-Length")).isFalse();
-      assertThat(headers.contains("Content-length")).isFalse();
-      assertThat(headers.contains("content-length")).isTrue();
+      assertThat(headers).doesNotContain("Content-Length");
+      assertThat(headers).doesNotContain("Content-length");
+      assertThat(headers).contains("content-length");
     }
   }
 
   @Test
   void readingIsCaseInsensitive() {
     for (HttpMessage<?> message :
-        Arrays.asList(new HttpRequest(HttpMethod.GET, "/"), new HttpResponse())) {
+        List.of(new HttpRequest(HttpMethod.GET, "/"), new HttpResponse())) {
       message.addHeader("Content-Length", "1024");
       message.addHeader("Content-length", "2048");
       message.addHeader("content-length", "4096");
@@ -61,7 +61,7 @@ class HttpMessageTest {
   @Test
   void replacingIsCaseInsensitive() {
     for (HttpMessage<?> message :
-        Arrays.asList(new HttpRequest(HttpMethod.GET, "/"), new HttpResponse())) {
+        List.of(new HttpRequest(HttpMethod.GET, "/"), new HttpResponse())) {
       message.addHeader("Content-Length", "1024");
       message.addHeader("Content-length", "2048");
       message.addHeader("content-length", "4096");
@@ -72,22 +72,22 @@ class HttpMessageTest {
       message.getHeaderNames().forEach(headers::add);
 
       assertThat(message.getHeader("content-length")).isEqualTo("8192");
-      assertThat(headers.contains("Content-Length")).isFalse();
-      assertThat(headers.contains("Content-length")).isFalse();
-      assertThat(headers.contains("contenT-length")).isFalse();
-      assertThat(headers.contains("content-length")).isTrue();
+      assertThat(headers).doesNotContain("Content-Length");
+      assertThat(headers).doesNotContain("Content-length");
+      assertThat(headers).doesNotContain("contenT-length");
+      assertThat(headers).contains("content-length");
     }
   }
 
   @Test
   void allHeadersAreRemoved() {
     for (HttpMessage<?> message :
-        Arrays.asList(new HttpRequest(HttpMethod.GET, "/"), new HttpResponse())) {
+        List.of(new HttpRequest(HttpMethod.GET, "/"), new HttpResponse())) {
       message.addHeader("Content-Length", "1024");
       message.addHeader("Content-length", "2048");
       message.addHeader("content-length", "4096");
 
-      assertThat(message.getHeaderNames().iterator().hasNext()).isTrue();
+      assertThat(message.getHeaderNames().iterator()).hasNext();
 
       message.removeHeader("Content-Length");
 
